<resources>
    <string name="app_name">ABN_quizz app</string>

    <string name="title">Last quiz</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="answer4">Answer 4</string>

    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>

    <string name="initialQ">1</string>
    <string name="questionNo">Question number:</string>
    <string name="err_read">Error while reading the file</string>
</resources>
